--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -22,4 +22,7 @@ dependencies {
     implementation 'org.apache.commons:commons-math3:3.6.1'
 
     implementation 'com.acmerobotics.roadrunner:core:0.5.4'
+    
+    // FTC Layer dependency
+    implementation 'com.github.ftc17191:FTCLayer:1.0.0'
 }
