--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -24,5 +24,5 @@ dependencies {
     implementation 'com.acmerobotics.roadrunner:core:0.5.4'
     
     // FTC Layer dependency
-    implementation 'com.github.ftc17191:FTCLayer:1.0.0'
+    implementation 'com.github.ftc17191:FTCLayer:+'
 }
